--- a/css/eskupext.css
+++ b/css/eskupext.css
@@ -1,20 +1,16 @@
-﻿@font-face {
-	font-family: LCDFont;  
-	src: url( fonts/ds-digi.ttf ) format("truetype");  
-}
-
-.time {
-	font-family: LCDFont;
-}
+﻿@import url(http://fonts.googleapis.com/css?family=Metrophobic);
 
 body {
 	min-width:465;
 	height:auto;
 	overflow-x:hidden;
-	font-family: Geneva, Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	font-family: 'Metrophobic', sans-serif;
+	font-size: 16px;
 	overflow-y:hidden;
 	color:#333;
+}
+
+.time {
 }
 
 .tabbertab,
@@ -44,16 +40,15 @@ a {
 	width: 455px;
 }
 
-.imageselector img {
+#imageselector #images img {
 	margin:10px;
 }
-
-.main {
-	display:none;
+#imageselector #images img:hover {
+	border: 2px solid #ff3300;
 }
 
 .perfil {
-	font-size:12px;
+	font-size:1em;
 }
 
 .message_list {
@@ -154,7 +149,7 @@ a {
 
 }
 
-.send, .cancel, .insert_llink, .setbold, .setitalic, .insert_image, .delete, .confirm {
+.send, .cancel, .insertlink, #setbold, #setitalic, #insertimage, #insertvideo, .delete, .confirm {
 	width:50px;
 	display:block;
 	float:left;
@@ -237,6 +232,10 @@ a {
   height: 65px;
 }
 
+#newtext {
+	border: 1px solid red;
+	height: 300px;
+}
 .commands {  
   position: absolute;
   top: 46px;
@@ -331,63 +330,33 @@ a {
 	margin-left: 80px;
 }
 
-.followto, .followme {
+/* Followers */
+#follow-to, #follow-me {
 	overflow-x: hidden;
 	overflow-y: auto;
-	height:300px;
+	height: 300px;
 }
 
-#followto_n, #followme_n {
-	font-size:140%;
-	font-weight:bold;
-	color:#f30;
-}
-
-#c_followto {
+#follow-to {
 	width:48%;
 	float:left;
 }
 
-#c_followme {
+#follow-me {
 	width:48%;
 	float:right;
 }
 
-#c_followtome {
-	width:98%;
-}
-
-#c_followtome h4 {
-	text-transform:uppercase;
-	margin:5px 0 5px 0;
-}
-
-.followitem1 {	
-	padding:1px;
-	display: inline;
-}
-
-.followitem2 {
-	padding: 1px;
-	display: inline; 
-}
-
-.followto img, .followme img {
+#follows img {
 	width:35px;
 	height:auto;
-}
-
-.followto a, .followme a {		
-		display:block;
-		float:left;
-		margin:2px;
-}
-
-.followitem1 a {
+	padding: 1px;
+	display: inline;
 	border:3px solid #f30;
 }
 
-.followitem2 a {
+
+#follows img.online {
 	border:3px solid #ccc;
 }
 
