--- a/css/eskupext.css
+++ b/css/eskupext.css
@@ -1,19 +1,41 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Metrophobic);
 
 body {
-	min-width:465;
+	width:465;
 	height:auto;
 	overflow-x:hidden;
+	overflow-y:hidden;
 	font-family: 'Metrophobic', sans-serif;
 	font-size: 16px;
-	overflow-y:hidden;
 	color:#333;
 }
 
-.time {
+#dialog {
+	width: 400px;
+	height: 300px;
+	z-index: 100;
+	background-color: #ddd;
+	border: 1px solid black;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -200px;
+	margin-top: -150px;
+	opacity: .9;
+	display: none;
+}
+#dialog .button {
+	background-color: orange;
+	color: white;
+	bottom: 0px;
+	width: 50px;
+	border: 2px solid white;
+	font-weight: bold;
+	text-align: center;
+	cursor: pointer;
+	margin: 5px;
 }
 
-.tabbertab,
 .tabbernav {
    width: 466px;
 }
@@ -21,16 +43,14 @@ body {
 .tabbertab {
    width: 455px
 }
-.message_list {
-   width: 455px;
-}
+
 .theme_list {
 	width: 455px;
 	background-color:#ff3300;
 }
 
 a {
-	color:#ff3300;
+	color:#f30;
 }
 
 .imageselector, .thread {
@@ -51,9 +71,10 @@ a {
 	font-size:1em;
 }
 
-.message_list {
+.message-list {
+	width: 455px;
+	height:400px;
 	overflow-y: scroll;
-	height:400px;	
     background-color: #eee;
 	padding-left: 5px;
 }
@@ -65,7 +86,6 @@ a {
 	margin: 1px;
 	margin-top:5px;
 	margin-right: 10px;
-	/*height:auto;*/	
 	background:#FFF;
 	overflow: hidden;
 	padding: 10px;	
@@ -149,12 +169,6 @@ a {
 
 }
 
-.send, .cancel, .insertlink, #setbold, #setitalic, #insertimage, #insertvideo, .delete, .confirm {
-	width:50px;
-	display:block;
-	float:left;
-}
-
 .confirm {
 	background-color:#ff3300;
 	color:#FFF;
@@ -202,99 +216,34 @@ a {
 	float: left;	
 }
 
-.resend {
-	float:right;
-}
-
-.user_info {
-}
-
-.counter {
-	font-size:30px;
-	font-weight:bold;
-	border: 2px solid #FF0000;
-	width:60px;
-	height:60px;
-	color: #ff3300;
-	text-align:center;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
 .reply_link {
 	float:right;
 }
 
-
-.new_message {
-  position: relative;
-  height: 65px;
+#counter {
+	font-size:2em;
+	font-weight:bold;
 }
 
-#newtext {
+#commands {
+	width: 50px;
+	float: left;
+}
+
+#toolbar {
+	width: 400px;
+	float: right;
+}
+
+#toolbar .button {
+	display:inline;
+}
+
+#newmessage {
 	border: 1px solid red;
-	height: 300px;
-}
-.commands {  
-  position: absolute;
-  top: 46px;
-  left: 70px;
-  width: 395px;
-}
-
-.commands div {
-   width: 20px;
-   float: left;
-   text-align:center;
-}
-
-.commands div a {
-   background-color: #ff3300;
-	border: 1px solid #ff3300;
-	display: block;
-	margin: 0 2px 0 0;
-	color: #fff;
-	text-decoration: none;
-}
-
-.commands .send {
-    position: absolute;
-	top: -42px; 
-	left: 335px;
-	width:60px;
-}
-
-.commands .send a {
-    padding-top: 5px;
-	padding-bottom: 5px;
-}
-
-.commands .cancel {
-    position: absolute;
-	top: -15px; 
-	left: 335px;
-	width:60px;
-}
-
-.commands .cancel a {
-    background-color: #eee;
-	color: #ff3300;
-	border: 0;
-}
-
-.commands div a:hover {
-    background-color: #eee;
-    color: #ff3300;
-}
-
-.new_message textarea {
-  font: normal 12px Arial,Helvetica,sans-serif;
-  position: absolute;
-  top: 0px;
-  left: 70px;
-  width: 330px;
-  height: 45px;
+	height: 100px;
+	width: 400px;
+	float: right;
 }
 
 .confirm {
@@ -352,12 +301,12 @@ a {
 	height:auto;
 	padding: 1px;
 	display: inline;
-	border:3px solid #f30;
+	border:3px solid #ccc;
 }
 
 
 #follows img.online {
-	border:3px solid #ccc;
+	border:3px solid #f30;
 }
 
 .login_message {
@@ -369,14 +318,14 @@ a {
 	margin-bottom:5px;
 }
 
-.otros_servicios {
+#fbtt {
 	width:150px !important;
 	height:20px;
 	display:block;
 	float:left;
 }
 
-.otros_servicios a {
+#fbtt a {
 	width:20px;
 	background-color:#FFF;
 	float:right;
