--- a/css/editor.css
+++ b/css/editor.css
@@ -1,30 +1,28 @@
 #editor {
-	position: relative;
-	height: 180px;
 }
 
 #commands {
 	position: absolute;
 	left: 0;
-	top: 0;
+	top: 50px;
 	width: 100px;
 }
 
 #toolbar {
 	position: absolute;
-	top: 0;
-	left: 120px;
+	top: 10px;
+	left: 150px;
 	width: 400px;
 }
 
 #newmessage {
-	position: relative;
-	left: 120px;
+	position: absolute;
+	left: 150px;
 	top: 50px;
 	border: 2px solid #FF7A00;
 	-webkit-border-radius: 10px;
 	height: 120px;
-	width: 500px;
+	width: 400px;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	padding: 5px;
