--- a/css/eskupext.css
+++ b/css/eskupext.css
@@ -4,24 +4,18 @@ a {
 	color:#f30;
 }
 
+/* Navegación */
 .section-container {
 	height: 50px;
 	width: 150px;
 	overflow: hidden;
-	transition: all 1s ease;
-	-moz-transition: all 1s ease;
 	-webkit-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	border-top: 1px dotted #f30;
-	position: relative;
+	border-bottom: 2px solid red;
 	background-color: white;
 }
 
 .section-container:hover {
 	height: 300px;
-}
-
-.section-container.expand-w:hover {
 	width: 600px;
 }
 
@@ -33,183 +27,110 @@ a {
 	font-size: 1.2em;
 }
 
-.board {
+ul.navigator {
+	padding: 0;
+}
+ul.navigator li {
+	list-style: none;
+	cursor: pointer;
+}
+ul.navigator li:hover {
+	background-color: red;
+	color: white;
+}
+
+#board, #profile {
 	background-color: white;
 	width: 450px;
-	height:600px;
 	position: absolute;
 	top: 0;
 	right: 0;
-	-webkit-transform: rotateY(180deg);
-	-webkit-backface-visibility: hidden;
-	-webkit-transition: -webkit-transform 1s ease;
+	-webkit-transition: all 1s ease;
 }
-.board:hover {
-	-webkit-transform: rotateY(0deg);
-}
-.section-container:hover + .board {
-	-webkit-transform: rotateY(0deg);
+#board {
+	height: 600px;
 }
 
+#profile {
+	z-index: 10;
+	overflow: hidden;
+	height:0;
+}
+#profile:hover, #profile.on {
+	height: 600px;
+}
+
+#editor {
+	z-index: 10;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+/* Mensajes */
 .message-list {
 	overflow-y: scroll;
-    background-color: #eee;
-	padding-left: 5px;
 }
 
 .message {
 	border: 1px solid #ccc;
-	font-size: 12px;
-	background-color: #FFFFFF;
-	margin: 1px;
+	font-size: 1em;
+	background-color: white;
 	margin-top:5px;
-	margin-right: 10px;
-	background:#FFF;
-	overflow: hidden;
 	padding: 10px;	
-	min-height:114px;
 }
 
-.message p {
-	margin-top:0.5em;
-	margin-bottom:0.5em;
-}
 .msg_header {
-	font-size:14px;
+	font-size:1.2em;
+	position: relative;
+	border-bottom: 1px dotted #FF7A00;
+}
+.msg_header > b {
+	display: block;
 }
 
-.msg_footer {
-}
-
-.msg_content {
-	width: 345px;
-	float: right;
-	margin: 0 0 10px 0;
-}
-
-.msg_content  img {
-    max-width: 345px;
-	height: auto;
-	float: right;
-	border: 1px solid #ccc;
+.msg_header img {
+	width:50px;
+	height:auto;
+	border: 1px solid black;	
+	padding: 1px;
+	float:left;
+	margin-right: 10px;
+	margin-bottom: 5px;
 }
 
 .msg_control {
-	width:50px;
-	font-size:10px;
-	float: left;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 50px;
+	overflow: hidden;
+	-webkit-transition: all .5s ease;
+	opacity: 0;
 }
 
-.thread .msg_content {
-	margin-left:60 px;
-	width:auto;
-	float:none;
-}
-
-.thread .message {
-	position:relative;
-}
-
-.thread .msg_control {
-	position:absolute; 
-	top: 10px;
-	left: 10px ;
-}
-
-.msg_control img {
-	width:50px;
-	height:auto;
-	border:1px #ddd;	
-	padding: 1px;
-	float:left;
-	margin-right:2px;
-}
-
-.msg_control a {
-    background-color: #ff3300;
-	border: 1px solid #ff3300;
-	display: block;
-	margin: 2px 0 1px 0;
-	color: #fff;
-	text-decoration: none;
-	width: 99%;
-	padding-right: 1px;
-	text-align: right;
-	float: none;
+.msg_control .btn {
+	margin-bottom: 2px;
+	color:white;
 	clear: both;
 	cursor: pointer;
-	
+	font-size: .8em;
+	display: inline;
+	margin-right: 10px;
+	font-weight: bold;
 }
 
-.msg_control a:hover {
-    background-color: #eee;
-    color: #f10000;
-
+.msg_control:hover {
+	background-color: #FFB673;
+	width: 500px;
+	opacity: 1;
 }
 
-.confirm {
-	background-color:#ff3300;
-	color:#FFF;
-	display:none;
-}
-.confirm {
-	position: relative;
-}
-.confirm a {
-/*	background-color:#F00;*/
-/*	color:#FFF;*/
-	display:inline;
-	font-weight:bold;
-/*	border:3px #FFF;*/
-	margin-right:10px;
-	text-decoration:none;
-	border-right: 3px solid #ff3300;
-	background-color:#FFF;
-	color: #ff3300;
-	width:12px; 
-	position: absolute;
-	top:  0px;
-	left: 0px;
-	
+.msg_content  img {
+	padding: 1px;
+	border: 1px solid #ccc;
 }
 
-.confirm a:last-child {
-	width:25px;
-	left:22px;
-}
-
-.reply2link, .thlink, .temas {
-	float:right;
-	margin: 2px;
-	background-color:#fff;
-	border:solid 1px #ff3300;
-	cursor:pointer;
-	font-size:10px;
-	color:#f30;
-	padding:2px;
-	-webkit-border-radius: 2px;  
-}
-
-.reply_link {
-	float:right;
-}
-
-.confirm {
-  background-color: #fff;
-  color: #333;
-  text-align: right;
-}
-.confirm a {
-  
-  display: block;
-  
-  
-}
-
-.profile {
-  width: 470px;
-  overflow: hidden;
-}
 .profile img {
   margin:2px;
   width:75px;
@@ -221,10 +142,7 @@ a {
 	background-color:white;
 	margin:2px;
 	border-width:1px;
-	color:#000;
-	padding:3px;
-	width:364px;
-	margin-left: 80px;
+	padding-left: 70px;
 }
 
 /* Followers */
@@ -327,12 +245,3 @@ a {
 	display:inline;
 }
 
-
-/* Sección TEMAS */
-.section-container ul {
-	padding: 0;
-}
-.section-container li {
-	list-style: none;
-	cursor: pointer;
-}
