--- a/css/tree.css
+++ b/css/tree.css
@@ -1,15 +1,36 @@
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
+
+
 
 .node {
-  font: 10px sans-serif;
+	font: 1em;
+}
+.node circle {
+	fill: #fff;
+	stroke: #03899C;
+	stroke-width: 1px;
+}
+.node rect {
+	cursor: pointer;
+	fill: #fff;
+	fill-opacity: .5;
+	stroke: #3182bd;
+	stroke-width: 1.5px;
+	margin-top: 2px;
 }
 
 .link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
+	fill: none;
+	stroke: #ccc;
+	stroke-width: 1.5px;
+}
+
+.node text {
+	font: 1.2em;
+	pointer-events: none;
+}
+
+path.link {
+	fill: none;
+	stroke: #9ecae1;
+	stroke-width: 1.5px;
 }
