--- a/css/image-editor.css
+++ b/css/image-editor.css
@@ -38,28 +38,25 @@ body {
 
 #canvas-layers .item {
 	cursor: pointer;
-	padding: 2px 2px 5px 2px;
-	height: 42px;
-	position: relative;
+	padding-bottom: 5px;
+	height: auto;
 	-webkit-transition: all .2s ease;
 }
 #canvas-layers .item div {
 	background-color: white;
-	height: 100%;
+	height: 42px;
 	width: 100%;
 }
 
 #canvas-layers .item.hover {
 	padding-bottom: 10px;
 	margin-bottom: 10px;
-	border-bottom: 5px solid red;
+	border-bottom: 10px solid red;
 }
 
 #canvas-layers .item img {
 	max-height: 40px;
-	position: absolute;
-	top: 1px;
-	right: 1px;
+	float: right;
 	margin: 2px;
 }
 
