--- a/css/eskupext.css
+++ b/css/eskupext.css
@@ -1,217 +1,12 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Metrophobic);
+﻿@import url(http://fonts.googleapis.com/css?family=Noticia+Text:400,400italic,700,700italic);
 
 a {
 	color:#f30;
 }
 
-/* Navegación */
-.section-container {
-	height: 50px;
-	width: 150px;
-	overflow: hidden;
-	-webkit-transition: all 1s ease;
-	border-bottom: 1px dotted red;
-	background-color: white;
-	position: relative;
-	cursor: pointer;
-}
-
-#edit-section.section-container:hover, #edit-section.section-container.on {
-	height: 250px;
-	width: 600px;
-	z-index: 10;
-}
-.section-container:hover {
-	height: 300px;
-}
-
-.section-container h1 {
-	font-size: 1.5em;
-}
-
-.section-container h2 {
-	font-size: 1.2em;
-}
-
-ul.navigator {
-	padding: 0;
-}
-ul.navigator li {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	list-style: none;
-	cursor: pointer;
-	padding: 2px;
-}
-ul.navigator li:hover {
-	background-color: #FF7A00;
-	color: white;
-}
-
-#board {
-	position: absolute;
-	top: 0;
-	right: 0;
-	background-color: white;
-	width: 450px;
-	height: 600px;
-	overflow: scroll;
-}
-
-#profile {
-	position: absolute;
-	top: 0;
-	right: 0;
-	background-color: white;
-	width: 450px;
-	-webkit-transition: all 1s ease;
-	height: 0;
-	overflow: hidden;
-}
-#prof-section:hover + #profile, #profile.on {
-	height:600px;
-}
-#editor {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-}
-/* Mensajes */
-.message-list {
-	overflow-y: scroll;
-}
-
-.message {
-	border: 1px solid #ccc;
-	font-size: 1em;
-	background-color: white;
-	margin-top:5px;
-	padding: 10px;	
-}
-
-.msg_header {
-	font-size:1.2em;
-	position: relative;
-	border-bottom: 1px dotted #FF7A00;
-}
-.msg_header > b {
-	display: block;
-}
-
-.msg_header img {
-	width:50px;
-	height:auto;
-	border: 1px solid black;	
-	padding: 1px;
-	float:left;
-	margin-right: 10px;
-	margin-bottom: 5px;
-}
-
-.msg_control {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 50px;
-	overflow: hidden;
-	-webkit-transition: all .5s ease;
-	opacity: 0;
-}
-
-.msg_control .btn {
-	margin-bottom: 2px;
-	color:white;
-	clear: both;
-	cursor: pointer;
-	font-size: .8em;
-	display: inline;
-	margin-right: 10px;
-	font-weight: bold;
-}
-
-.msg_control:hover {
-	background-color: #FFB673;
-	width: 500px;
-	opacity: 1;
-}
-
-.msg_content  img {
-	padding: 1px;
-	border: 1px solid #ccc;
-}
-
-.profile img {
-  margin:2px;
-  width:75px;
-  height:75px;
-  float:left;
-}
-
-.profile_item {
-	background-color:white;
-	margin:2px;
-	border-width:1px;
-	padding-left: 70px;
-}
-
-/* Followers */
-#follow-to, #follow-me {
-	overflow-x: hidden;
-	overflow-y: auto;
-	height: 300px;
-}
-
-#follow-to {
-	width:48%;
-	float:left;
-}
-
-#follow-me {
-	width:48%;
-	float:right;
-}
-
-#follows img {
-	width:35px;
-	height:auto;
-	padding: 1px;
-	display: inline;
-	border:3px solid #ccc;
-}
-
-
-#follows img.online {
-	border:3px solid #f30;
-}
-
-.login_message {
-	font-size:14px;
-}
-
 .video {
 	margin-top:5px;
 	margin-bottom:5px;
-}
-
-#fbtt {
-	width:150px !important;
-	height:20px;
-	display:block;
-	float:left;
-}
-
-#fbtt a {
-	width:20px;
-	background-color:#FFF;
-	float:right;
-}
-
-#seguiropcion, #blockopcion {
-	padding:0px;
-	margin:0 0 0 3px;
-	float:right;
 }
 
 .noseguido {
@@ -230,29 +25,3 @@ ul.navigator li:hover {
 .seguido a {
 	color:#fff;
 }
-
-/* Estrella de favorito */
-.favon, .favoff {
-	float:right;
-	border:0 !important;
-}
-.favon {
-	-webkit-filter: grayscale(0);
-}
-.favoff {
-	-webkit-filter: grayscale(100%);
-}
-.section_head {
-	display:inline;
-}
-.search {
-	display:inline;
-}
-
-.search_res {
-	color:#6F6;
-	background-color:#F3C;
-	font-size:18px;
-	display:inline;
-}
-
