--- a/css/popup.css
+++ b/css/popup.css
@@ -43,6 +43,7 @@ ul.navigator li:hover {
 	padding: 10px 5px;
 	background-color: #0293ff;
 	color: #fff;
+	/* position: fixed; */
 }
 #header-menu {
 	float: right;
@@ -88,7 +89,8 @@ ul.navigator li:hover {
 	background-color: #eee;
 	width: 450px;
 	height: 600px;
-	overflow-y: scroll;
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
 #board, #tree-board {
 	-webkit-transition: all .5s ease;
@@ -96,13 +98,17 @@ ul.navigator li:hover {
 }
 #board {
 	position: absolute;
-	width: 450px;
-	/* height: 600px; */
+	/* width: 450px; */
+	height: 600px;
+	overflow-y: scroll;
 }
 #tree-board {
 	position: absolute;
 	left: 450px;
+	height: 600px;
 	top: 0;
+	overflow-y: scroll;
+	width: 450px;
 }
 #closetree {
 	display: block;
@@ -113,7 +119,8 @@ ul.navigator li:hover {
 	bottom: 0;
 	width: 100%;
 	background-color: #fff;
-	height: 50px;
+	height: 40px;
+	border-top: 1px solid #fff;
 	overflow: hidden;
 	-webkit-transition: height .25s ease-in-out;
 	   -moz-transition: height .25s ease-in-out;
@@ -130,6 +137,7 @@ ul.navigator li:hover {
 	height: 20px;
 	padding: 10px;
 	cursor: pointer;
+	margin: 0;
 }
 
 #edit-section.on, #profile-section.on {
@@ -157,13 +165,12 @@ ul.navigator li:hover {
 }
 
 .message {
-	border: 1px solid #ddd;
+	border: 1px solid #dfdfdf;
 	font-size: 1em;
 	background-color: white;
 	margin: 10px;
 	padding: 10px;
-	border-radius: 3px;
-	box-shadow: 0 2px 3px #eee;
+	box-shadow: 0 1px 2px #d9d9d9;
 }
 .message.on {
 	background-color: cyan;
@@ -173,7 +180,7 @@ ul.navigator li:hover {
 	font-size:1em;
 	position: relative;
 	border-bottom: 1px dotted #ccc;
-	min-height: 50px;
+	min-height: 65px;
 }
 
 .msg_header > b {
@@ -192,40 +199,39 @@ ul.navigator li:hover {
 .msg_control {
 	position: absolute;
 	right: 0;
-	bottom: 0;
+	top: 0;
 	width: 70px;
 	overflow: hidden;
-	-webkit-transition: all .5s ease;
-	height: 10px;
-	background-color: #FFB673;
-	font-size: .8em;
+	/* -webkit-transition: all .5s ease; */
+	height: 1.2em;
+	font-size: 11px;
+	color: #ccc;
 }
 
 .msg_control:hover {
-	height: 60px;
+	height: 65px;
 }
-
+.msg_control:before {
+	display: block;
+	text-align: right;
+	color: #666;
+	font-size: 12px;
+}
+.msg_control:hover:before {
+	display: none;
+}
 .msg_control .btn {
 	cursor: pointer;
-	background-repeat: no-repeat;
-	opacity: .5;
-	width: 15px;
-	height: 15px;
+	padding: 2px;
+}
+.msg_control .btn.fa {
+	display: block;
+	width: 100%;
+	
+	
 }
 .msg_control .btn:hover {
-	opacity: 1;
-}
-.btn.reply {
-	background-image: url('/icon/reply.png');
-}
-.btn.fwd {
-	background-image: url('/icon/fwd.png');
-}
-.favon {
-	background-image: url('/icon/fav.png');
-}
-.favoff {
-	background-image: url('/icon/fav.png');
+	color: #666;
 }
 
 .msg_content {
@@ -242,23 +248,6 @@ ul.navigator li:hover {
 	height: auto;
 }
 
-.reply2link, .thlink {
-	display: inline-block;
-	/*-webkit-border-radius: 3px;
-	border: 1px solid black;
-	cursor: pointer;*/
-}
-.thlink {
-	background-image: url('/icon/thread.png');
-	background-repeat: no-repeat;
-	padding: 0;
-	border: 0;
-	opacity: .8;
-	cursor: pointer;
-}
-.thlink:hover {
-	opacity: 1;
-}
 /* Profile */
 #profile-section img {
   margin:2px;
