--- a/css/popup.css
+++ b/css/popup.css
@@ -1,6 +1,6 @@
 body {
 	width:600px;
-	height: 650px;
+	/* height: 650px; */
 	overflow-x:hidden;
 	overflow-y:hidden;
 	font-family: 'Roboto', sans-serif;
@@ -88,7 +88,7 @@ ul.navigator li:hover {
 	float: right;
 	background-color: #eee;
 	width: 450px;
-	height: 600px;
+	height: 550px;
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
@@ -99,7 +99,7 @@ ul.navigator li:hover {
 #board {
 	position: absolute;
 	/* width: 450px; */
-	height: 600px;
+	height: 510px;
 	overflow-y: scroll;
 }
 #tree-board {
