--- a/css/dialog.css
+++ b/css/dialog.css
@@ -27,11 +27,13 @@
 	display: inline-block;
 	background-color: #666;
 	color: white;
-	width: 50px;
+	min-width: 50px;
 	text-align: center;
 	cursor: pointer;
 	margin-right: 20px;
 	margin-top: 10px;
+	padding: 3px;
+	font-size: 12px;
 }
 
 #dlg .btn:hover {
