--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,4 +1,4 @@
-#modal {
+.modal {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -6,7 +6,7 @@
 	bottom: 0;
 	background-color: rgba(0,0,0,.6);
 }
-#dlg {
+.dlg {
 	margin-left: auto;
 	margin-right: auto;
 	width: 400px;
@@ -17,13 +17,15 @@
 	color: #666;
 	box-shadow: -3px 2px 8px 0px rgba(50, 50, 50, 0.75);
 }
-#dlg_msg {
+.dlg_msg {
 	border-bottom: 1px solid #ccc;
 }
-#dlg_extra {
+.dlg_extra {
 	margin-top: 10px;
+	max-height: 300px;
+	overflow-y: scroll;
 }
-#dlg .btn {
+.dlg .btn {
 	display: inline-block;
 	background-color: #666;
 	color: white;
@@ -36,7 +38,7 @@
 	font-size: 12px;
 }
 
-#dlg .btn:hover {
+.dlg .btn:hover {
 	background-color: #000;
 }
 
