--- a/css/editor.css
+++ b/css/editor.css
@@ -7,8 +7,10 @@
 #commands {
 	position: absolute;
 	left: 0;
-	top: 0;
+	top: 20px;
 	width: 100px;
+	/* background-color: #f2f2f2; */
+	padding: 10px;
 }
 
 #toolbar {
@@ -23,7 +25,7 @@
 	left: 120px;
 	top: 30px;
 	border: 1px solid #eee;
-	height: 100px;
+	height: 110px;
 	width: 450px;
 	overflow-y: scroll;
 	overflow-x: hidden;
@@ -33,7 +35,7 @@
 #destinations {
 	position: absolute;
 	left: 120px;
-	top: 150px;
+	top: 170px;
 }
 #canvasimage {
 	border: 1px dotted black;
@@ -43,12 +45,17 @@
 	width: 100px;
 }
 
-#commands #counter {
-	font-size:1.5em;
-	border: 1px solid #ddd;
-	border-radius: 3px;
+#counter {
+	font-size:24px;
+	border: 1px solid #eee;
 	text-align: center;
-	height: 40px;
+	height: 50px;
+	background-color: #fff;
+}
+#counter:after {
+	content: "caracteres";
+	font-size: 10px;
+	display: block;
 }
 
 #commands a {
@@ -57,18 +64,16 @@
 }
 
 #commands #send, #commands #cancel {
-	background-color: #000;
+	background-color: #666;
 	color: white;
 	cursor: pointer;
 	margin-top: 10px;
-	height: 30px;
+	padding: 5px;
+
 	text-align: center;
 }
 #commands #send:hover, #commands #cancel:hover {
-	background-color: #1F6B75;
-}
-#commands #send:active, #commands #cancel:active {
-	background-color: #015965;
+	background-color: #000;
 }
 
 #toolbar button {
