--- a/css/eskupext.css
+++ b/css/eskupext.css
@@ -1,7 +1,5 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Noticia+Text:400,400italic,700,700italic);
-
-a {
-	color:#f30;
+﻿a {
+	color:#0293ff;
 }
 
 .video {
